welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: value lightGrey is not a member of object java.awt.Color
case Color.lightGrey => baisseBrosse; leveBrosse;
           ^